Fixed gap issues for mobile devices in Card CSS module

--- a/budgetly/src/Components/UI/CardComponents/Card.module.css
+++ b/budgetly/src/Components/UI/CardComponents/Card.module.css
@@ -28,8 +28,10 @@
 
 @media (max-width: 800px) {
     .card {
-        grid-template-columns: 1fr;
-       ;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        
     }
      
 }
